--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,8 @@
 {
     "rewrites": [
-        {"source": "/(.*)", "destination": "/"}
-    ]
+        {"source": "/(.*)", "destination": "/index.html"}
+    ],
+    "env": {
+        "VITE_BACKEND_URL": "https://code-mate-zqtp.vercel.app"
+    }
 }
