--- a/server/render.yaml
+++ b/server/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: code-mate-backend
     runtime: node
+    rootDir: server
     buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
